# lyrebird

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml.example  flake.nix  shell.nix
.github/workflows/: ci.yml
runner/: Cargo.toml
runner/src/: main.rs
src/: list.rs  main.rs  metadata.rs  play.rs  queue.rs  restart.rs  search.rs  track.rs  vc.rs  ws.rs
