[workspace]
members = [ "runner" ]

[package]
name = "lyrebird"
description = "this package uses youtube-dl and is a discord bot. How could this be bad?"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] } 
lazy_static = "1.4.0"
tracing = "0.1.37"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
color-eyre = "0.6.2"
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO
[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "next"
features = [ "builtin-queue" ]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["client", "model", "cache", "voice", "rustls_backend"]

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]
